# shaman1

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  config-shaman1.h.cmake  config.h.cmake  generateTs.sh  installShaman.sh  moc_MainWindow.cpp  qtPacman.pro  shaman.notifyrc  ui_MainWindow.h
branches/1.1/: .cproject  .project  CHANGELOG  CMakeLists.txt  config.h.cmake  generateTs.sh
branches/1.1/etc/: kdemodmirrorlist
branches/1.1/src/: LocalPackageDialog.cpp  LocalPackageDialog.h  MainWindow.cpp  MainWindow.h  QueueDialog.h  configDialog.h
branches/1.1/translations/: shaman_el.ts  shaman_fr.ts  shaman_tr.ts  shaman_zh_CN.ts
branches/1.1/ui/: buildingDialog.ui  fromFileDialog.ui
etc/: CMakeLists.txt  shaman.conf  shaman.desktop  shaman.notifyrc  shaman.xml
firstrun/: CMakeLists.txt  configurationpage.cpp  configurationpage.h  finishpage.cpp  finishpage.h  firstrun_main.cpp  firstrunwizard.cpp  firstrunwizard.h  intropage.cpp  intropage.h  kdepage.cpp  kdepage.h  securitypage.cpp  securitypage.h
plasma/applet/: AbstractView.h  CMakeLists.txt  ErrorView.cpp  ErrorView.h  IdleView.cpp  IdleView.h  TransactionView.cpp  TransactionView.h  shamanApplet.cpp  shamanApplet.h
plasma/runner/: CMakeLists.txt  shamanRunner.cpp  shamanRunner.h
src/: ABSHandler.cpp  ABSHandler.h  ArchLinuxNewsReader.cpp  ArchLinuxNewsReader.h  BuildingDialog.cpp  BuildingDialog.h  BuildingHandler.cpp  BuildingHandler.h  CMakeLists.txt  EditPBuild.cpp  EditPBuild.h  ErrorHandler.cpp  ErrorHandler.h  LocalPackageDialog.cpp  LocalPackageDialog.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  MaintenanceBar.cpp  MaintenanceBar.h  NewsViewer.cpp  NewsViewer.h  PackageProperties.cpp  PackageProperties.h  QueueDialog.cpp  QueueDialog.h  ReviewQueueDialog.cpp  ReviewQueueDialog.h  Shaman.cpp  Shaman.h  ShamanDialog.cpp  ShamanDialog.h  ShamanIcon.cpp  ShamanIcon.h  ShamanStatusBar.cpp  ShamanStatusBar.h  ShamanTrayIcon.cpp  ShamanTrayIcon.h  ShamanTreeWidgetItem.cpp  (+12 more)
src/config/: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigModuleBase.h  DatabaseConfig.cpp  DatabaseConfig.h  MirrorWidget.cpp  MirrorWidget.h  ThirdPartyWidget.cpp  ThirdPartyWidget.h  absConfig.ui  aqpmConfig.ui  configDialog.ui  databaseConfig.ui  mirrorWidget.ui  serverWidget.ui  settings-package-management.desktop  shamanAdvanced.ui  shamanGeneral.ui  thirdPartyWidget.ui
src/config/aqpm/: AqpmConfig.cpp  AqpmConfig.h  CMakeLists.txt  aqpmConfig.ui  kcmaqpm.desktop
src/config/databases/: CMakeLists.txt  DatabaseConfig.cpp  DatabaseConfig.h  MirrorWidget.cpp  MirrorWidget.h  ServerWidget.cpp  ServerWidget.h  ThirdPartyWidget.h  databaseConfig.ui  kcmaqpmdatabases.desktop  mirrorWidget.ui
src/config/shamangeneral/: CMakeLists.txt  ShamanGeneralConfig.cpp  ShamanGeneralConfig.h  kcmshamangeneral.desktop  shamanGeneral.ui
tags/1.0.9/translations/: CMakeLists.txt  shaman_de.ts  shaman_en.ts  shaman_it.ts  shaman_lt.ts  shaman_nb.ts  shaman_nl.ts  shaman_pl.ts  shaman_tr.ts
trunk/: CMakeLists.txt  COPYING  Makefile  README  TODO  configoptions  moc_AlpmHandler.cpp  moc_ConfigurationParser.cpp  moc_MainWindow.cpp  moc_UpdateDbDialog.cpp  moc_callbacks.cpp  org.archlinux.shaman.xml  qtPacman  qtPacman.pro  qtPacman2-TODO  ui_MainWindow.h  ui_dbUpdateDialog.h
trunk/dbus/: org.archlinux.shaman.xml
trunk/plasma/: CMakeLists.txt
trunk/plasma/applet/: CMakeLists.txt  shamanApplet.cpp  shamanApplet.h
trunk/plasma/engine/: CMakeLists.txt  shamanEngine.cpp  shamanEngine.h
trunk/shaman/: .project  CHANGELOG  CMakeLists.txt  INSTALL  buildShaman.sh  config.h.cmake  generateTs.sh  installShaman.sh
trunk/shaman/dbus/: org.archlinux.shaman.xml  shamanadaptor.cpp  shamanadaptor.h
trunk/shaman/etc/: CMakeLists.txt  kdemodmirrorlist  shaman.conf  shaman.desktop  shaman.xml
trunk/shaman/plasma/: CMakeLists.txt
trunk/shaman/src/: ABSHandler.cpp  ABSHandler.h  AlpmHandler.cpp  AlpmHandler.h  ArchLinuxNewsReader.cpp  ArchLinuxNewsReader.h  Authenticator.cpp  Authenticator.h  BuildingDialog.cpp  BuildingDialog.h  BuildingHandler.cpp  BuildingHandler.h  CMakeLists.txt  ConfigurationParser.cpp  ConfigurationParser.h  EditPBuild.cpp  EditPBuild.h  LocalPackageDialog.cpp  LocalPackageDialog.h  LogViewer.cpp  MainWindow.cpp  MainWindow.h  MaintenanceBar.cpp  MaintenanceBar.h  NewsViewer.cpp  NewsViewer.h  PackageProperties.cpp  PackageProperties.h  QueueDialog.cpp  QueueDialog.h  ReviewQueueDialog.cpp  ReviewQueueDialog.h  Shaman.cpp  Shaman.h  ShamanDialog.cpp  ShamanDialog.h  ShamanStatusBar.cpp  ShamanStatusBar.h  ShamanTrayIcon.cpp  ShamanTrayIcon.h  (+14 more)
trunk/shaman/translations/: allPoToTs.sh  shaman_cs.ts  shaman_de.ts  shaman_el.ts  shaman_en.ts  shaman_es.ts  shaman_fr.ts  shaman_it.ts  shaman_lt.ts  shaman_mk.ts  shaman_nb.ts  shaman_nl.ts  shaman_nn.ts  shaman_no.ts  shaman_pl.ts  (+4 more)
trunk/src/: ABSHandler.cpp  ABSHandler.h  AlpmHandler.cpp  AlpmHandler.h  BuildingDialog.cpp  BuildingDialog.h  BuildingHandler.cpp  BuildingHandler.h  ConfigurationParser.cpp  ConfigurationParser.h  EditPBuild.cpp  EditPBuild.h  MainWindow.cpp  MainWindow.h  ManteinanceDialog.cpp  ManteinanceDialog.h  QueueDialog.cpp  QueueDialog.h  RepoDialogCl.cpp  RepoDialogCl.h  RepoWidget.cpp  RepoWidget.h  StringUtils.cpp  StringUtils.h  SysUpgradeDialog.cpp  SysUpgradeDialog.h  UpdateDbDialog.cpp  UpdateDbDialog.h  callbacks.cpp  callbacks.h  configDialog.cpp  configDialog.h  main.cpp
trunk/translations/: shaman_de.ts  shaman_el.ts  shaman_es.ts  shaman_fr.ts  shaman_it.ts  shaman_pt_BR.ts
trunk/tribe/: CMakeLists.txt
trunk/ui/: MainWindow.ui  RepoWidget.ui  aboutDialog.ui  buildingDialog.ui  configDialog.ui  dbUpdateDialog.ui  dbUpdateDialogPerhaps.ui  editPBDialog.ui  mantDialog.ui  mockupConfigDialog.ui  pacmanConfig.ui  qtpacman.qrc  repoDialog.ui  reviewBuildingDialog.ui  reviewQueueDialog.ui  transactionDialog.ui  transactionDialogPerhaps.ui  upgradeDialog.ui
ui/: CMakeLists.txt  MainWindow.ui  configDialog.ui  editPBDialog.ui  reviewBuildingDialog.ui  shaman.qrc  transactionDialog.ui  upgradeDialog.ui
ui/icons/: CMakeLists.txt
(+462 files in other folders)
